<resources>
    <string name="app_name">AltosDroid</string>
    <string name="title_pad">Pad</string>
    <string name="title_flight">Flight</string>
    <string name="title_recover">Recover</string>
    <string name="title_map">Map</string>
    <string name="bt_not_enabled">Bluetooth was not enabled.</string>
    <string name="title_connecting">connecting…</string>
    <string name="title_connected_to">connected</string>
    <string name="title_not_connected">not connected</string>
    <string name="connect_device">Connect a device</string>
    <string name="disconnect_device">Disconnect device</string>
    <string name="quit">Quit</string>
    <string name="setup">Setup</string>
    <string name="select_freq">Select radio frequency</string>
    <string name="select_rate">Select data rate</string>
    <string name="change_units">Change units</string>
    <string name="preload_maps">Download Maps</string>
    <string name="view_data">View Saved Data</string>
    <string name="select_tracker">Select Tracker</string>
    <string name="delete_track">Delete Track</string>
    <string name="map_type">Map Type</string>
    <string name="map_source">Map Source</string>
    <string-array name="map_types">
        <item>Street</item>
        <item>Satellite</item>
        <item>Hybrid</item>
        <item>Terrain</item>
    </string-array>
    <string name="map_online">Online</string>
    <string name="map_distance">Distance</string>
    <string name="map_bearing">Bearing</string>
    <string name="map_receiver_position">Receiver\nPosition</string>
    <string name="map_target_position">Target\nPosition</string>
    <string name="map_target">Target</string>
    <string name="map_receiver">Receiver</string>
    <string name="scanning">Scanning…</string>
    <string name="select_device">Select device</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="freq_label">Freq</string>
    <string name="telemetry_service_label">AltosDroid Telemetry Service</string>
    <string name="telemetry_service_started">Telemetry Service Started</string>
    <string name="telemetry_service_stopped">Telemetry Service Stopped</string>
    <string name="callsign_label">Call</string>
    <string name="serial_label">Serial</string>
    <string name="flight_label">Flight</string>
    <string name="state_label">State</string>
    <string name="rssi_label">RSSI</string>
    <string name="age_label">Age</string>
    <string name="height_label">Height</string>
    <string name="altitude_label">Altitude</string>
    <string name="gps_speed_label">GPS Speed</string>
    <string name="gps_height_label">GPS Height</string>
    <string name="gps_altitude_label">GPS Altitude</string>
    <string name="speed_label">Speed</string>
    <string name="accel_label">Acceleration</string>
    <string name="tilt_label">Tilt</string>
    <string name="bearing_label">Bearing</string>
    <string name="direction_label">Direction</string>
    <string name="elevation_label">Elevation</string>
    <string name="range_label">Range</string>
    <string name="distance_label">Distance</string>
    <string name="gnd_distance_label">Ground Distance</string>
    <string name="max_height_label">Max Height</string>
    <string name="max_altitude_label">Max Altitude</string>
    <string name="max_speed_label">Max Speed</string>
    <string name="max_accel_label">Max Accel</string>
    <string name="max_gps_speed_label">Max GPS Speed</string>
    <string name="max_gps_height_label">Max GPS Height</string>
    <string name="max_gps_altitude_label">Max GPS Altitude</string>
    <string name="battery_voltage_label">Battery</string>
    <string name="receiver_voltage_label">Receiver Battery</string>
    <string name="apogee_voltage_label">Apogee Igniter</string>
    <string name="main_voltage_label">Main Igniter</string>
    <string name="ignite_a_voltage_label">Igniter A</string>
    <string name="ignite_b_voltage_label">Igniter B</string>
    <string name="ignite_c_voltage_label">Igniter C</string>
    <string name="ignite_d_voltage_label">Igniter D</string>
    <string name="logging_label">Data Logging</string>
    <string name="gps_locked_label">GPS Locked</string>
    <string name="gps_ready_label">GPS Ready</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="target_pos_label">Target</string>
    <string name="receiver_pos_label">Receiver</string>
    <string name="target_latitude_label">Latitude</string>
    <string name="target_longitude_label">Longitude</string>
    <string name="target_altitude_label">Altitude</string>
    <string name="target_position_label">Target Position</string>
    <string name="set_pad_altitude">Set My Altitude</string>
    <string name="receiver_latitude_label">Latitude</string>
    <string name="receiver_longitude_label">Longitude</string>
    <string name="receiver_altitude_label">Altitude</string>
    <string name="receiver_position_label">Receiver Position</string>
    <string name="unknown_value">«unknown»</string>
    <string name="connecting_to">Connecting to</string>
    <string name="not_connected">Not connected</string>
    <string name="heading_left">left</string>
    <string name="heading_right">right</string>
    <string name="heading_ahead">ahead</string>
    <string name="heading_backwards">backwards</string>
    <string name="receiver_motion_label">Receiver Announce</string>
    <string name="target_motion_label">Target Announce</string>
    <string name="preload_site_label">Launch Site</string>
    <string name="preload_latitude_label">Latitude</string>
    <string name="preload_longitude_label">Longitude</string>
    <string name="preload_types">Map Types</string>
    <string name="preload_hybrid">Hybrid</string>
    <string name="preload_satellite">Satellite</string>
    <string name="preload_roadmap">Roadmap</string>
    <string name="preload_terrain">Terrain</string>
    <string name="preload_min_zoom">Minimum Zoom</string>
    <string name="preload_max_zoom">Maximum Zoom</string>
    <string name="preload_radius">Radius</string>
    <string name="preload_load">Load Map</string>
    <string name="idle_mode">Idle Mode</string>
    <string name="set_callsign_label">Callsign</string>
    <string name="connect_idle">Monitor</string>
    <string name="disconnect_idle">Disconnect</string>
    <string name="reboot_idle">Reboot</string>
    <string name="igniters_idle">Fire Igniters</string>
    <string name="save_data">Save Flight Data</string>
    <string name="igniters">Igniters</string>
    <string name="igniter_arm">Arm</string>
    <string name="igniter_armed">Armed</string>
    <string name="igniter_fire">Fire</string>
    <string name="telemetry_rate">Telemetry Rate</string>
    <string name="select_units">Units</string>
    <string name="select_voice">Voice</string>
    <string name="font_size">Text Size</string>
    <string name="manage_frequencies">Manage Frequencies</string>
    <string name="done">OK</string>
    <string name="set">Set</string>
    <string name="mhz">MHz</string>
    <string name="remove">Remove</string>
    <string name="frequency">Frequency</string>
    <string name="frequency_mhz">Frequency(MHz)</string>
    <string name="description">Description</string>
    <string name="bt_unavailable">Bluetooth Unavailable</string>
    <string name="bt_denied">Access to Bluetooth devices denied</string>
    <string name="configure">Configure Device</string>
    <string name="main_deploy">Main Deploy</string>
    <string-array name="main_deploy_values_m">
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>300</item>
        <item>350</item>
    </string-array>
    <string-array name="main_deploy_values_ft">
        <item>250</item>
        <item>500</item>
        <item>750</item>
        <item>1000</item>
        <item>1250</item>
        <item>1500</item>
    </string-array>
    <string name="apogee_delay">Apogee Delay(s)</string>
    <string-array name="apogee_delay_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="apogee_lockout">Apogee Lockout(s)</string>
    <string-array name="apogee_lockout_values">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
    <string name="igniter_mode">Igniter Mode</string>
    <string-array name="igniter_mode_values">
        <item>Dual Deploy</item>
	<item>Redundant Apogee</item>
	<item>Redundant Main</item>
	<item>Separation &amp; Apogee</item>
    </string-array>
    <string name="aprs_interval">APRS Interval</string>
    <string-array name="aprs_interval_values">
        <item>Disabled</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
    </string-array>
    <string name="aprs_ssid">APRS SSID</string>
    <string-array name="aprs_ssid_values">
	<item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string name="radio_10mw">Max TX Power</string>
    <string name="limited">10mW Limit</string>
    <string name="aes">AES Key</string>
    <string name="pad_box">Pad Box</string>
    <string-array name="pad_box_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string name="pad_idle">Pad Box Timeout</string>
    <string-array name="pad_idle_values">
        <item>10</item>
        <item>30</item>
        <item>120</item>
        <item>600</item>
        <item>3600</item>
    </string-array>
    <string name="pad_timeout">LCO Idle Timeout (s)</string>
    <string name="aprs_offset">APRS Offset</string>
    <string-array name="aprs_offset_values">
	<item>0</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
    </string-array>
    <string name="aprs_format">APRS Format</string>
    <string-array name="aprs_format_values">
        <item>Compressed (Yaesu compatible)</item>
        <item>Uncompressed (Kenwood compatible)</item>
    </string-array>
    <string name="pad_orientation">Pad Orientation</string>
    <string-array name="pad_orientation_values">
        <item>Antenna Up</item>
        <item>Antenna Down</item>
    </string-array>
    <string name="beeper_frequency">Beeper(Hz)</string>
    <string-array name="beeper_frequency_values">
	<item>2000</item>
	<item>2100</item>
	<item>2200</item>
	<item>3750</item>
	<item>4000</item>
	<item>4250</item>
    </string-array>
    <string name="beeper_units">Beeper Units</string>
    <string-array name="beeper_units_values">
	<item>Meters</item>
	<item>Feet</item>
    </string-array>
    <string name="tracker_motion">Tracker Motion</string>
    <string-array name="tracker_motion_values_m">
	<item>2</item>
	<item>5</item>
	<item>10</item>
	<item>25</item>
    </string-array>
    <string-array name="tracker_motion_values_ft">
	<item>5</item>
	<item>20</item>
	<item>50</item>
	<item>100</item>
    </string-array>
</resources>