<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/connect_scan"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/connect_device" />
    <item android:id="@+id/disconnect"
	  android:icon="@android:drawable/ic_notification_clear_all"
	  android:title="@string/disconnect_device" />
    <item android:id="@+id/select_freq"
          android:icon="@android:drawable/ic_menu_preferences"
          android:title="@string/select_freq" />

    <item android:id="@+id/select_tracker"
	  android:icon="@android:drawable/ic_menu_view"
	  android:title="@string/select_tracker"/>
    <item android:id="@+id/delete_track"
	  android:icon="@android:drawable/ic_notification_clear_all"
	  android:title="@string/delete_track"/>

    <item android:id="@+id/setup"
          android:icon="@android:drawable/ic_menu_preferences"
          android:title="@string/setup" />
    <item android:id="@+id/idle_mode"
          android:icon="@android:drawable/ic_menu_preferences"
          android:title="@string/idle_mode" />

    <item android:id="@+id/quit"
          android:icon="@android:drawable/ic_menu_close_clear_cancel"
          android:title="@string/quit" />
</menu>