<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_pad">

    <fragment
        android:id="@+id/navigation_pad"
        android:name="org.altusmetrum.altosdroid.ui.pad.PadFragment"
        android:label="@string/title_pad"
        tools:layout="@layout/fragment_pad" />

    <fragment
        android:id="@+id/navigation_flight"
        android:name="org.altusmetrum.altosdroid.ui.flight.FlightFragment"
        android:label="@string/title_flight"
        tools:layout="@layout/fragment_flight" />

    <fragment
        android:id="@+id/navigation_recover"
        android:name="org.altusmetrum.altosdroid.ui.recover.RecoverFragment"
        android:label="@string/title_recover"
        tools:layout="@layout/fragment_recover" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="org.altusmetrum.altosdroid.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />
</navigation>