<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="0dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TableLayout
            android:id="@+id/tracker_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1,2,3,4">
            <TableRow
                android:id="@+id/tracker_row"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="2dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    android:id="@+id/call_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/callsign_label" />
                <RadioButton
                    android:id="@+id/serial_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serial_label" />
                <RadioButton
                    android:id="@+id/frequency_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/freq_label" />
                <RadioButton
                    android:id="@+id/age_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:text="@string/age_label" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</android.widget.LinearLayout>
