<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    tools:context=".ui.recover.RecoverFragment">
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:stretchColumns="0,1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/bearing_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/LabelText"
                android:text="@string/bearing_label" />

            <TextView
                android:id="@+id/bearing_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ValueText"
                android:text="123" />
        </TableRow>

        <TableRow
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/direction_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/LabelText"
                android:text="@string/direction_label" />

            <TextView
                android:id="@+id/direction_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ValueText"
                android:text="123" />
        </TableRow>

        <TableRow
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/distance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/LabelText"
                android:text="@string/distance_label" />

            <TextView
                android:id="@+id/distance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ValueText"
                android:text="1010m" />
        </TableRow>

        <TableRow
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/target_lat_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/LabelText"
                android:text="@string/target_latitude_label" />

            <TextView
                android:id="@+id/target_lat_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/PosText"
                android:text="45.1234" />
        </TableRow>

        <TableRow
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/target_lon_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/LabelText"
                android:text="@string/target_longitude_label" />

            <TextView
                android:id="@+id/target_lon_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/PosText"
                android:text="123.456" />

        </TableRow>

        <TableRow
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/receiver_lat_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/LabelText"
                android:text="@string/receiver_latitude_label" />

            <TextView
                android:id="@+id/receiver_lat_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/PosText"
                android:text="45.1234" />
        </TableRow>

        <TableRow
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/receiver_lon_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/LabelText"
                android:text="@string/receiver_longitude_label" />

            <TextView
                android:id="@+id/receiver_lon_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/PosText"
                android:text="123.3456"/>
        </TableRow>

        <TableRow
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/max_height_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/LabelText"
                android:text="@string/max_height_label" />

            <TextView
                android:id="@+id/max_height_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ValueText"
                android:text="1010m" />
        </TableRow>

        <TableRow
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >


            <TextView
                android:id="@+id/max_speed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/LabelText"
                android:text="@string/max_speed_label" />

            <TextView
                android:id="@+id/max_speed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ValueText"
                android:text="600m/s" />
        </TableRow>

        <TableRow
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/max_accel_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/LabelText"
                android:text="@string/max_accel_label" />

            <TextView
                android:id="@+id/max_accel_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ValueText"
                android:text="300m/s²" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>